@@ -2,6 +2,8 @@
 - Code optimization (speed, memory) with numexpr
 - New keyword argument `save_memory` for 3D reconstruction
   on machines with limited memory
+- New keyword argument `copy` for 3D reconstruction to protect
+  input sinogram data.
 0.1.4
 - The exponential term containing the distance between center
   of rotation and detector `lD` is now multiplied with
